sov-modules/sov-modules-macros/tests/module_info/missing_address.stderr
error: The `ModuleInfo` macro requires `[address]` attribute.
 --> tests/module_info/missing_address.rs:5:10
  |
5 | #[derive(ModuleInfo)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ModuleInfo` (in Nightly builds, run with -Z macro-backtrace for more info)
